WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310119
nba.com: iPad/VisionOS: Video preview window when scrubbing is not aligned with the scrubbing location
https://bugs.webkit.org/show_bug.cgi?id=310119
Summary
nba.com: iPad/VisionOS: Video preview window when scrubbing is not aligned wi...
joanne_pan2
Reported
2026-03-17 11:13:48 PDT
When scrubbing a video using gaze and pinch, the video preview that comes up is ahead of the actual scrub bar. Works fine if using external trackpad Steps to reproduce: 1. Go to NBA.com 2. Go to watch 3. Start any video 4. Scrub using gaze and pinch 5. Observe
Attachments
Add attachment
proposed patch, testcase, etc.
joanne_pan2
Comment 1
2026-03-17 11:14:03 PDT
<
rdar://147429596
>
joanne_pan2
Comment 2
2026-03-17 11:22:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60794
EWS
Comment 3
2026-03-18 21:03:56 PDT
Committed
309529@main
(65bc16239c47): <
https://commits.webkit.org/309529@main
> Reviewed commits have been landed. Closing PR #60794 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug