nba.com: iPad/VisionOS: Video preview window when scrubbing is not aligned with the scrubbing location https://bugs.webkit.org/show_bug.cgi?id=310119 rdar://147429596

Reviewed by Tim Nguyen.

Adds quirk for nba.com to use the existing
scriptToEvaluateBeforeRunningScriptFromURL mechanism.

The injected script:
1. Listens for touchmove events to target the slider
2. Creates a synthetic MouseEvent with offsetX/Y computed
   from clientX - getBoundingClientRect().left
3. Dispatches it in a microtask so site's onMouseMove
   handler runs after onTouchMove to overwrite the wrong position

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::scriptToEvaluateBeforeRunningScriptFromURL):
(WebCore::handleNBAQuirks):

Canonical link: https://commits.webkit.org/309529@main